<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weather.view.home.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_self"
            app:destination="@id/homeFragment" />
        <argument
            android:name="locationData"
            android:defaultValue="@null"
            app:argType="com.example.weather.model.pojo.LocationData"
            app:nullable="true" />
        <argument
            android:name="isFavourite"
            app:argType="boolean"
            android:defaultValue="false" />

    </fragment>

    <fragment
        android:id="@+id/favouritePlaceFragment"
        android:name="com.example.weather.view.favourite.FavouritePlaceFragment"
        android:label="@string/Favourite"
        tools:layout="@layout/fragment_favourite_place" >
        <action
            android:id="@+id/action_favouritePlaceFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
        <action
            android:id="@+id/action_favouritePlaceFragment_self"
            app:destination="@id/favouritePlaceFragment" />
        <action
            android:id="@+id/action_favouritePlaceFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.weather.view.settings.SettingsFragment"
        android:label="@string/Setting"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.weather.view.favourite.MapsFragment"
        android:label="MapsFragment" >
        <argument
            android:name="location"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="" />
        <action
            android:id="@+id/action_mapsFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_mapsFragment_to_favouritePlaceFragment"
            app:destination="@id/favouritePlaceFragment" />
    </fragment>
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weather.AlertFragment"
        android:label="AlertFragment" />
</navigation>